--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,28 +9,31 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Research"
+  url = ""
   weight = 20
+  identifier = "research"
 
 [[main]]
-  name = "Projects"
+  name = "Working papers"
+  url = "#publications"
+  weight = 20
+  parent = "research"
+
+[[main]]
+  name = "Work in progress"
   url = "#projects"
   weight = 30
+  parent = "research"
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
-
-[[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 60
+ name = "Teaching"
+ url = "#teaching"
+ weight = 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "media/cv.pdf"
-#    weight = 70
+[[main]]
+   name = "CV"
+   url = "media/cv.pdf"
+   weight = 70
