--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -270,7 +270,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "G-ZD3C5581M8"
   google_tag_manager = ""
 
 ############################
