Update menu on homepage to add links

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,13 +27,18 @@
   parent = "research"
 
 [[main]]
- name = "Teaching"
- url = "#teaching"
- weight = 40
+  name = "Teaching"
+  url = "#teaching"
+  weight = 40
+
+[[main]]
+  name = "Links"
+  url = "links"
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
 [[main]]
-   name = "CV"
-   url = "media/cv.pdf"
-   weight = 70
+  name = "CV"
+  url = "media/cv.pdf"
+  weight = 70
